codex-rs/tui/src/app/snapshots/codex_tui__app__btw__tests__btw_loading_popup.snap
---
source: tui/src/app/btw.rs
expression: "render_selection_popup(&view, 92, 20)"
---
TestBackend { buffer: Buffer {
    area: Rect { x: 0, y: 0, width: 92, height: 20 },
    content: [
        "                                                                                            ",
        "  Temporary BTW discussion                                                                  ",
        "  Running a hidden temporary discussion thread.                                             ",
        "                                                                                            ",
        "› 1. Discard  Cancel and destroy the temporary discussion.                                  ",
        "                                                                                            ",
        "  Temporary `/btw` discussion                                                               ",
        "  Codex is answering in a hidden ephemeral thread. Nothing will be written back to the      ",
        "  main thread unless you explicitly choose an insert action.                                ",
        "                                                                                            ",
        "                                                                                            ",
        "                                                                                            ",
        "                                                                                            ",
        "                                                                                            ",
        "                                                                                            ",
        "                                                                                            ",
        "                                                                                            ",
        "                                                                                            ",
        "                                                                                            ",
        "  Press enter to confirm or esc to go back                                                  ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 26, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 47, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 58, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}, scrollback: Buffer {
    area: Rect { x: 0, y: 0, width: 92, height: 0 }
}, cursor: false, pos: (0, 0) }
